header and hero

--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style/style.css">
-    <title>Trafigo - Tomiwa</title>''
+    <title>Trafigo - Tomiwa</title>
 </head>
 <body>
-    
+    <header>
+        <a href="#" class="logo">
+            <img src="src/asset/logo.svg" alt="Trafigo Logo">
+        </a>
+
+        <nav>
+            <ul>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">HOW TO</a></li>
+                <li><a href="#">FAQS</a></li>
+                <li><a href="#">CONTACT US</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="hero">
+        <h1>Your awesome traffic permit consultant.</h1>
+        <a href="#" class="btn">GET STARTED</a>
+        <img src="src/asset/mobel.svg" alt="truck">
+    </section>
 </body>
 </html>
