header now static || truck niow included

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <section class="hero">
         <h1>Your awesome traffic permit consultant.</h1>
         <a href="#" class="btn">GET STARTED</a>
-        <img src="src/asset/mobel.svg" alt="truck">
+        <div class="truck"></div>
+        <!-- <img src="src/asset/mobel.svg" alt="truck" class="truck"> -->
     </section>
 </body>
 </html>
