--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
         <h1>Your awesome traffic permit consultant.</h1>
         <a href="#" class="btn">GET STARTED</a>
         <div class="truck"></div>
-        <!-- <img src="src/asset/mobel.svg" alt="truck" class="truck"> -->
+    </section>
+    <section class="about">
+        <h2>ABOUT US</h2>
+        <p class="classic">The occupational traffic permit is one of the most important things in the company when carrying out freight transport.  In fact, it is a prerequisite for doing business traffic at all. </p>
+        <p class="special">How do you do when you need to obtain a commercial traffic permit for freight transport to your business?</p>
+        <div class="delivery-man"></div>
     </section>
 </body>
 </html>
