--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@
         <p class="special">How do you do when you need to obtain a commercial traffic permit for freight transport to your business?</p>
         <div class="delivery-man"></div>
     </section>
+    <section class="how-to">
+        <h2>How to apply</h2>
+        <p class="classic">When applying for a traffic permit, there are certain requirements that you must meet that are included in the examination: requirements for professional knowledge, solid establishment, good reputation and financial resources. Important to remember is to confirm your application for a traffic permit by the company's company signer or CEO.</p>
+        <div class="customer-care"></div>
+    </section>
 </body>
 </html>
