--- a/index.html
+++ b/index.html
@@ -38,5 +38,26 @@
         <p class="classic">When applying for a traffic permit, there are certain requirements that you must meet that are included in the examination: requirements for professional knowledge, solid establishment, good reputation and financial resources. Important to remember is to confirm your application for a traffic permit by the company's company signer or CEO.</p>
         <div class="customer-care"></div>
     </section>
+    <section class="faq">
+        <h2>FAQ</h2>
+        <p class="classic">Questions and Answers on Professional Traffic Permits:</p>
+        <div class="man-thinking"></div>
+        <ul class="questions">
+            <li>What is a professional traffic permit?
+                <ul class="answers">
+                    <li>Traffic permits are a requirement for conducting professional traffic.</li>
+                </ul>
+            </li>
+            <li>When is a professional traffic permit needed?</li>
+            <li>Where to look for a traffic permit?</li>
+            <li>Are there differences between a traffic permit and a professional traffic permit?</li>
+            <li>How to check the traffic condition?</li>
+            <li>How much does a commercial traffic permit cost for goods?</li>
+            <li>What are the requirements for a professional traffic permit?</li>
+            <li>How to plug in for the traffic permit test?</li>
+            <li>Are there professional traffic permit training courses at a distance?</li>
+            <li>How is the sample for a professional traffic permit booked?</li>
+        </ul>
+    </section>
 </body>
 </html>
