--- a/index.html
+++ b/index.html
@@ -59,5 +59,15 @@
             <li>How is the sample for a professional traffic permit booked?</li>
         </ul>
     </section>
+    <section class="contact">
+        <p>We provide traffic management consultants so you get started quickly, contact us for a quote today!</p>
+        <form action="#" onsubmit="">
+            <label for="userName">Name</label>
+            <input type="text" name="userName" id="userName">
+            <label for="email">Email address</label>
+            <input type="email" name="email" id="email" placeholder="Your email address">
+            <input type="submit" value="GET STARTED">
+        </form>
+    </section>
 </body>
 </html>
