--- a/index.html
+++ b/index.html
@@ -69,5 +69,24 @@
             <input type="submit" value="GET STARTED">
         </form>
     </section>
+    <footer>
+        <a href="#" class="logo">
+            <img src="src/asset/logo.svg" alt="Trafigo Logo">
+        </a>
+
+        <nav>
+            <ul>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">HOW TO</a></li>
+                <li><a href="#">FAQS</a></li>
+            </ul>
+        </nav>
+        <p>Copyright @ <span>2019</span></p>
+        <ul class="socials">
+            <li><a href="#"><span class="facebook"></span></a></li>
+            <li><a href="#"><span class="twitter"></span></a></li>
+            <li><a href="#"><span class="instagram"></span></a></li>
+        </ul>
+    </footer>
 </body>
 </html>
