--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
         <nav>
             <ul>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">HOW TO</a></li>
-                <li><a href="#">FAQS</a></li>
-                <li><a href="#">CONTACT US</a></li>
+                <li><a href="#ab">ABOUT</a></li>
+                <li><a href="#hw">HOW TO</a></li>
+                <li><a href="#fq">FAQS</a></li>
+                <li><a href="#cn">CONTACT US</a></li>
             </ul>
         </nav>
     </header>
@@ -27,18 +27,18 @@
         <a href="#" class="btn">GET STARTED</a>
         <div class="truck"></div>
     </section>
-    <section class="about">
+    <section class="about" id="ab">
         <h2>ABOUT US</h2>
         <p class="classic">The occupational traffic permit is one of the most important things in the company when carrying out freight transport.  In fact, it is a prerequisite for doing business traffic at all. </p>
         <p class="special">How do you do when you need to obtain a commercial traffic permit for freight transport to your business?</p>
         <div class="delivery-man"></div>
     </section>
-    <section class="how-to">
+    <section class="how-to" id="hw">
         <h2>How to apply</h2>
         <p class="classic">When applying for a traffic permit, there are certain requirements that you must meet that are included in the examination: requirements for professional knowledge, solid establishment, good reputation and financial resources. Important to remember is to confirm your application for a traffic permit by the company's company signer or CEO.</p>
         <div class="customer-care"></div>
     </section>
-    <section class="faq">
+    <section class="faq" id="fq">
         <h2>FAQ</h2>
         <p class="classic">Questions and Answers on Professional Traffic Permits:</p>
         <div class="man-thinking"></div>
@@ -59,7 +59,7 @@
             <li>How is the sample for a professional traffic permit booked?</li>
         </ul>
     </section>
-    <section class="contact">
+    <section class="contact" id="cn">
         <p>We provide traffic management consultants so you get started quickly, contact us for a quote today!</p>
         <form action="#" onsubmit="">
             <label for="userName">Name</label>
@@ -81,12 +81,12 @@
                 <li><a href="#">FAQS</a></li>
             </ul>
         </nav>
-        <p>Copyright @ <span>2019</span></p>
-        <ul class="socials">
-            <li><a href="#"><span class="facebook"></span></a></li>
-            <li><a href="#"><span class="twitter"></span></a></li>
-            <li><a href="#"><span class="instagram"></span></a></li>
-        </ul>
+        <p>Copyright @ <span id="cp-year">2019</span></p>
+        <div class="socials">
+            <span class="facebook"></span>
+            <span class="twitter"></span>
+            <span class="instagram"></span>
+        </div>
     </footer>
 </body>
 </html>
