--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <a href="#" class="logo">
             <img src="src/asset/logo.svg" alt="Trafigo Logo">
         </a>
+        <input type="checkbox" name="mobile-nav-btn" id="mobile-nav" class="mobile-nav-act">
+        
+        <label for="mobile-nav" class="mobile-nav-btn">
+            <span class="mobile-nav-icon">&nbsp;</span>
+        </label>
 
         <nav>
             <ul>
