JS functionality added

--- a/index.html
+++ b/index.html
@@ -14,40 +14,40 @@
         </a>
         <input type="checkbox" name="mobile-nav-btn" id="mobile-nav" class="mobile-nav-act">
         
-        <label for="mobile-nav" class="mobile-nav-btn">
+        <label for="mobile-nav" class="mobile-nav-btn" id="mobile-nav-label">
             <span class="mobile-nav-icon">&nbsp;</span>
         </label>
+        <div class="background"></div>
 
         <nav>
             <ul>
-                <li><a href="#ab">ABOUT</a></li>
-                <li><a href="#hw">HOW TO</a></li>
-                <li><a href="#fq">FAQS</a></li>
-                <li><a href="#cn">CONTACT US</a></li>
+                <li><a href="#" id="about-btn">ABOUT</a></li>
+                <li><a href="#" id="how-to-btn">HOW TO</a></li>
+                <li><a href="#" id="faqs-btn">FAQS</a></li>
+                <li><a href="#" id="contact-btn">CONTACT US</a></li>
             </ul>
         </nav>
     </header>
     <section class="hero">
         <h1>Your awesome traffic permit consultant.</h1>
         <a href="#" class="btn">GET STARTED</a>
-        <div class="truck"></div>
     </section>
-    <section class="about" id="ab">
+    <section class="about" id="section-about">
         <h2>ABOUT US</h2>
         <p class="classic">The occupational traffic permit is one of the most important things in the company when carrying out freight transport.  In fact, it is a prerequisite for doing business traffic at all. </p>
         <p class="special">How do you do when you need to obtain a commercial traffic permit for freight transport to your business?</p>
         <div class="delivery-man"></div>
     </section>
-    <section class="how-to" id="hw">
+    <section class="how-to" id="section-how">
         <h2>How to apply</h2>
         <p class="classic">When applying for a traffic permit, there are certain requirements that you must meet that are included in the examination: requirements for professional knowledge, solid establishment, good reputation and financial resources. Important to remember is to confirm your application for a traffic permit by the company's company signer or CEO.</p>
         <div class="customer-care"></div>
     </section>
-    <section class="faq" id="fq">
+    <section class="faq" id="section-faq">
         <h2>FAQ</h2>
         <p class="classic">Questions and Answers on Professional Traffic Permits:</p>
         <div class="man-thinking"></div>
-        <ul class="questions">
+        <ul class="questions" id="questions">
             <li>What is a professional traffic permit?
                 <ul class="answers">
                     <li>Traffic permits are a requirement for conducting professional traffic.</li>
@@ -64,7 +64,7 @@
             <li>How is the sample for a professional traffic permit booked?</li>
         </ul>
     </section>
-    <section class="contact" id="cn">
+    <section class="contact" id="section-contact">
         <p>We provide traffic management consultants so you get started quickly, contact us for a quote today!</p>
         <form action="#" onsubmit="">
             <label for="userName">Name</label>
@@ -93,5 +93,6 @@
             <span class="instagram"></span>
         </div>
     </footer>
+    <script src="src/app.js"></script>
 </body>
 </html>
