dynamically injecting the navitems

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style/style.css">
+    <link rel="stylesheet" href="src/style/style.css" >
     <title>Trafigo - Tomiwa</title>
 </head>
 <body>
@@ -19,14 +19,7 @@
         </label>
         <div class="background"></div>
 
-        <nav>
-            <ul>
-                <li><a href="#" id="about-btn">ABOUT</a></li>
-                <li><a href="#" id="how-to-btn">HOW TO</a></li>
-                <li><a href="#" id="faqs-btn">FAQS</a></li>
-                <li><a href="#" id="contact-btn">CONTACT US</a></li>
-            </ul>
-        </nav>
+        <nav ><ul id="navy"></ul></nav>
     </header>
     <section class="hero">
         <h1>Your awesome traffic permit consultant.</h1>
