NavLink changes per section on page scroll. ScrollHandler Function  refactored

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <div class="delivery-man"></div>
     </section>
     <section class="how-to" id="section-how">
-        <h2>How to apply</h2>
+        <h2>HOW TO APPLY</h2>
         <p class="classic">When applying for a traffic permit, there are certain requirements that you must meet that are included in the examination: requirements for professional knowledge, solid establishment, good reputation and financial resources. Important to remember is to confirm your application for a traffic permit by the company's company signer or CEO.</p>
         <div class="customer-care"></div>
     </section>
     <section class="faq" id="section-faq">
-        <h2>FAQ</h2>
+        <h2>FAQS</h2>
         <p class="classic">Questions and Answers on Professional Traffic Permits:</p>
         <div class="man-thinking"></div>
         <ul class="questions" id="questions">
@@ -58,6 +58,7 @@
         </ul>
     </section>
     <section class="contact" id="section-contact">
+        <h2>CONTACT US</h2>
         <p>We provide traffic management consultants so you get started quickly, contact us for a quote today!</p>
         <form action="#" onsubmit="">
             <label for="userName">Name</label>
@@ -74,8 +75,8 @@
 
         <nav>
             <ul>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">HOW TO</a></li>
+                <li><a href="#">ABOUT US</a></li>
+                <li><a href="#">HOW TO APPLY</a></li>
                 <li><a href="#">FAQS</a></li>
             </ul>
         </nav>
