Footer Nav bar now injected to the HTML with JS. Folder structure now to specification.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style/style.css" >
+    <link rel="stylesheet" href="src/css/styles.css" >
     <title>Trafigo - Tomiwa</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
         </label>
         <div class="background"></div>
 
-        <nav ><ul id="navy"></ul></nav>
+        <nav ><ul id="nav-head"></ul></nav>
     </header>
     <section class="hero">
         <h1>Your awesome traffic permit consultant.</h1>
@@ -73,13 +73,7 @@
             <img src="src/asset/logo.svg" alt="Trafigo Logo">
         </a>
 
-        <nav>
-            <ul>
-                <li><a href="#">ABOUT US</a></li>
-                <li><a href="#">HOW TO APPLY</a></li>
-                <li><a href="#">FAQS</a></li>
-            </ul>
-        </nav>
+        <nav><ul id="nav-foot"></ul></nav>
         <p>Copyright @ <span id="cp-year">2019</span></p>
         <div class="socials">
             <span class="facebook"></span>
@@ -87,6 +81,6 @@
             <span class="instagram"></span>
         </div>
     </footer>
-    <script src="src/app.js"></script>
+    <script src="src/js/app.js"></script>
 </body>
 </html>
